# vnqr

./: README.md  index.html  pyproject.toml
css/: style.css
examples/: banks.json  basic_usage.py  crawl_banks.py  qr_size_example.py  qr_with_icon.py  save_qr_image.py  simple_example.py  vietqr_example.html
src/vnqr/: __init__.py  constants.py  crc.py  element.py  qr.py  vietqr.py
src/vnqr/tools/: __init__.py  craw_bank.py
tests/: crc_test.py  element_test.py  qr_test.py  utils_test.py
